Fixing that the box shadow of the dialog was visible on the left side when hidden

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
   gap: 1.5rem;
   --animation-speed: 500ms;
   transition: all var(--animation-speed) ease-in;
-  transform: translateX(-100%);
+  transform: translateX(-110%);
 }
 .visible {
   transform: translateX(0%);
